variables.RunHalf.scala.error
Compilation error:
RunHalf:5: error: '(' expected but identifier found.
  if isOverOrange()==true {
     ^RunHalf:8: error: '(' expected but identifier found.
  if isOverBaggle()==true {
     ^RunHalf:11: error: illegal start of simple expression
} 
^